--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <br>
         <br>
         <div style="text-align: center;">
-            <a href="https://www.youtube.com/   watch?v=MsmLsAb1UsE"
+            <a href="https://www.youtube.com/watch?v=E9nqJFjUPQA"
              target="_blank" rel="external"><button style=" background-color: rgb(0, 0, 0); color: white; font-size: large; width: 200px;">Login</button></a>
         </div>
         <br>
         <div>
             <strong>Caso você não tenha conta crie uma aqui &#x1F449; </strong>
-            <a href="https://iplogger.com/2lwPb2" target="_blank" rel="external"><button style="border-radius: 20px; background-color: black; color: white;">Sing in</button></a>
+            <a href="https://iplogger.com/2lKnm2" target="_blank" rel="external"><button style="border-radius: 20px; background-color: black; color: white;">Sing in</button></a>
         </div>
     </div>
 </body>
