--- a/index.html
+++ b/index.html
@@ -23,5 +23,22 @@
             <a href="https://iplogger.com/2lKnm2" target="_blank" rel="external"><button style="border-radius: 20px; background-color: black; color: white;">Sing in</button></a>
         </div>
     </div>
+    <div style="background-color: rgb(79, 79, 248); border-radius: 5px; text-align: center; border-style: inset;">
+        <div>
+            <h1 style="text-align: start;">
+                Ei, você aí, sim, você mesmo! Está cansado de não conquistar nenhuma mulher? Essa é a sua solução! Venha descobrir o segredo que toda mulher sabe, mas não conta. O que as deixa realmente interessadas em um homem. É a sua vez de se tornar aquele cara conhecido por atrair todas! Chegou a sua hora, com apenas um clique, você terá uma aula 100% gratuita sobre como alcançar esse objetivo. Por que ainda está esperando? Vamos lá!
+            </h1>
+        </div>
+        <a href="https://libertinashop.com/products/dildo-com-ventosa-gg-black?_pos=2&_sid=cd17a95fd&_ss=r" target="_blank" rel="external"><img src="gif sei la oque.gif" alt="um gif sei la"></a>
+    </div>
 </body>
+<style>
+    img{
+        width: 400px;
+        border-radius: 10px;
+       }
+    h1{
+        font-size: large;
+    }
+</style>
 </html>
