atualização de um error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <br>
         <div>
             <strong>Caso você não tenha conta crie uma aqui &#x1F449; </strong>
-            <a href="https://iplogger.com/2lKnm2" target="_blank" rel="external"><button style="border-radius: 20px; background-color: black; color: white;">Sing in</button></a>
+            <a href="https://iplogger.com/2lKnm2" target="_blank" rel="external"><button style="border-radius: 20px; background-color: black; color: white;">Sing up</button></a>
         </div>
     </div>
     <div style="background-color: rgb(79, 79, 248); border-radius: 5px; text-align: center; border-style: inset;">
